--- a/21octubre.ipynb
+++ b/21octubre.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "21octubre.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNbupVTVA2Hib/bHizymJVk",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNcK9ZMkq5bu64HTC2oMrQD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +28,37 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "RAI8bB40hXIm",
+        "outputId": "2447bb6f-f7f8-4398-a3a9-60456c179e05",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        " \n",
+        "def ejemplo1( n ):\n",
+        "    c = n + 1\n",
+        "    d = c * n\n",
+        "    e = n * n\n",
+        "    total = c + e - d\n",
+        "    print(f\"total={ total }\")\n",
+        "ejemplo1( 99999 )"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "total=1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "GU17rSAUae2H",
         "outputId": "4d4adecf-f7e4-4304-d51d-9bfb4017436a",
         "colab": {
@@ -41,10 +73,10 @@
         "        for j in range( n ) :\n",
         "            contador += 1\n",
         "    return contador\n",
-        "\n",
+        " \n",
         "ejemplo2( 20 )"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -77,10 +109,10 @@
         "  for m in range(100):\n",
         "    y= x - n \n",
         "    return y\n",
-        "\n",
+        " \n",
         "ejemplo3(100)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -93,6 +125,164 @@
             "tags": []
           },
           "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hWcfVeQhhFZ5",
+        "outputId": "b435d826-302b-4da7-c08b-1eb6000030fa",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        " \n",
+        "def ejemplo4( n ):\n",
+        "    x = 3 * 3.1416 + n\n",
+        "    y = x + 3 * 3 - n\n",
+        "    z = x + y\n",
+        "    return z\n",
+        " \n",
+        "ejemplo4(9)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "36.849599999999995"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "j96HV4xAhO4M",
+        "outputId": "3dc3a777-9433-4e40-f402-287d882a03be",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        " \n",
+        "def ejemplo5( x ):\n",
+        "    n = 10\n",
+        "    for j in range( 0 , x , 1 ):\n",
+        "        n = j + n\n",
+        "    return n\n",
+        " \n",
+        "ejemplo5(10)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "55"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mukQyPxZh4si",
+        "outputId": "fa3882c6-541c-4aea-eb93-6599d56f986a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        " \n",
+        "def ejemplo6( n ):\n",
+        "    data=[[[1 for x in range(n)] for x in range(n)]\n",
+        "          for x in range(n)]\n",
+        "    suma = 0\n",
+        "    for d in range(n):\n",
+        "        for r in range(n):\n",
+        "            for c in range(n):\n",
+        "                suma += data[d][r][c]\n",
+        "    return suma\n",
+        "print(ejemplo6( 1000 ))"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1000000000\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3BhDzpCFnpu6",
+        "outputId": "a0149696-319f-47ee-8c50-3d5a3e92f17c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 71
+        }
+      },
+      "source": [
+        " \n",
+        "from time import time\n",
+        " \n",
+        "def ejemplo6( n ):\n",
+        "    start_time = time()\n",
+        "    data=[[[1 for x in range(n)] for x in range(n)] \n",
+        "          for x in range(n)]\n",
+        "    suma = 0\n",
+        "    for d in range(n):\n",
+        "        for r in range(n):\n",
+        "            for c in range(n):\n",
+        "                suma += data[d][r][c]\n",
+        "    elapsed_time = time() - start_time\n",
+        "    print(\"Tiempo transcurrido: %0.10f segundos.\" % elapsed_time)\n",
+        "    return suma\n",
+        " \n",
+        "ejemplo6( 100 )"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Tiempo transcurrido: 0.1326310635 segundos.\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1000000"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
         }
       ]
     }
